# flexon

./: Cargo.toml
benchmark/: Cargo.toml
benchmark/benches/: serialize_struct.rs
src/: lib.rs  simd.rs
src/parser/: mod.rs  skip_to.rs
src/serde/: de.rs  format.rs  mod.rs  ser.rs  span.rs
