[package]
name = "flexon"
version = "0.4.2"
edition = "2024"
description = "SIMD accelerated JSON parser"
repository = "https://github.com/cyruspyre/flexon"
license = "MIT"
exclude = ["benchmark/", ".gitignore"]
categories = ["parser-implementations", "parsing"]
keywords = ["simd", "json", "parser", "span", "comment"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde", "prealloc", "runtime-detection"]
simd = []
span = []
nightly = []
comment = []
prealloc = []
serde = ["dep:serde", "dep:zmij", "dep:itoa"]
runtime-detection = ["simd"]

[dependencies]
serde = { version = "1.0", optional = true }
zmij = { version = "1.0", optional = true }
itoa = { version = "1.0", optional = true }
simdutf8 = "0.1"
